@@ -76,14 +76,8 @@ Some files are licensed under the following terms:
    PURPOSE.  See the GNU Lesser General Public License for more
    details.
 
-   You should have received a copy of the GNU Lesser General
-   Public License along with this program; if not, write to the
-   Free Software Foundation, Inc., 59 Temple Place - Suite 330,
-   Boston, MA 02111-1307, USA.
-
 On Debian Systems, the full text of the license can be found on
 /usr/share/common-licenses/LGPL-2
-
 
 
 savers/xdg-user-dir-lookup.[ch] are licensed under the following terms:
